# HighPressure

./: .gitignore  README.md
HighPressure/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.hpp  CompressImplementation.cpp  CompressImplementation.hpp  Compressor.cpp  Compressor.hpp  HighPressure.cpp  HighPressure.sln  HighPressure.vcxproj  HighPressure.vcxproj.filters  Main.cpp  PathChecker.cpp  PathChecker.hpp  PathSystem.cpp  PathSystem.hpp  Version.h  ZipStruct.h  build.sh
HighPressure/src/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.hpp  CompressImplementation.cpp  Compressor.cpp  PathChecker.cpp  ZipStruct.h
